# platform.core.system.libsvi

./: CMakeLists.txt  README  SLP_FEEDBACK_PG.h  SLP_SVI_PG.h  feedback.pc.in  project.config  svi.c  svi.pc.in
TC/: config  tetbuild.cfg
TC/testcase/: Makefile  tslist  utc_system_feedback.c
TC/unit/: Makefile  tslist  utc_ApplicationFW_svi_fini_func.c  utc_ApplicationFW_svi_init_func.c  utc_ApplicationFW_svi_play_func.c
common/data/: sound.conf  sound.xml  vibration.conf
common/src/: check.c
data/emulator/: sound.xml  vibration.xml
data/micro/: sound.xml  vibration.xml
data/mobile/: sound.xml  vibration.xml
debian/: changelog  control  libsvi-dev.install.in  rules
doc/: feedback_doc.h
include/: common.h  dbus.h  devices.h  feedback-file.h  feedback-ids.h  feedback-internal.h  feedback-log.h  feedback-str.h  feedback.h  feedback_doc.h  log.h  svi-file.h  svi-ids.h  svi-log.h  svi.h  xmlparser.h
mobile/data/: vibration.conf  vibration_duration.conf  vibration_mix.conf
mobile/include/: feedback-ids-mobile.h
mobile/src/: check.c
packaging/: libfeedback.changes  libfeedback.manifest  libfeedback.spec  libsvi.spec  svi-data.manifest
pg-doxy/: doxygen.conf  pg-doxy.sh  slp_doxy.css
pg-doxy/tool/man/man1/: doxygen.1  doxytag.1
src/: common.h  dbus.c  dbus.h  devices.c  devices.h  feedback-internal.c  feedback.c  log.h  parser.c  parser.h  profiles.c  profiles.h  sound.c  str.c  svi.c  vibrator.c  xmlparser.c
test/: Makefile  capi_autofeedback.c  capi_feedback.c  feedback_test.c  getdata.c  svi_test.c
wearable/data/: effect.conf  sound.conf  sound.xml  vibration.conf
wearable/include/: feedback-ids-wearable.h
wearable/src/: check.c
