CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(feedback C)

SET(PREFIX ${CMAKE_INSTALL_PREFIX})
SET(EXEC_PREFIX "\${prefix}")
SET(INCLUDEDIR "\${prefix}/include/${PROJECT_NAME}")
SET(VERSION 0.1.4)

IF("${PROFILE}" STREQUAL "")
	SET(PROFILE "common")
ENDIF()
SET(FEEDBACK_PROFILE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/${PROFILE})

SET(SRCS
	src/sound.c
	src/vibrator.c
	src/devices.c
	src/parser.c
	src/feedback.c
	src/dbus.c
	${FEEDBACK_PROFILE_PATH}/src/check.c)

SET(HEADERS
	include/feedback.h
	include/feedback-ids.h
	include/feedback-internal.h)

IF(NOT "${PROFILE}" STREQUAL "common")
	SET(HEADERS ${HEADERS}
		${FEEDBACK_PROFILE_PATH}/include/feedback-ids-${PROFILE}.h)
	IF("${PROFILE}" STREQUAL "mobile")
		ADD_DEFINITIONS("-DMOBILE")
	ELSEIF("${PROFILE}" STREQIAL "wearable")
		ADD_DEFINITIONS("-DWEARABLE")
	ENDIF()
ENDIF()

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src)
INCLUDE_DIRECTORIES(${FEEDBACK_PROFILE_PATH}/include)

INCLUDE(FindPkgConfig)
pkg_check_modules(pkgs REQUIRED vconf mm-keysound dlog glib-2.0 dbus-1)

FOREACH(flag ${pkgs_CFLAGS})
	SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
ENDFOREACH(flag)

SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} -fvisibility=hidden")
SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} -g")

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS}")

ADD_LIBRARY(${PROJECT_NAME} SHARED ${SRCS})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES SOVERSION 0)
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES VERSION ${VERSION})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${pkgs_LDFLAGS})
INSTALL(TARGETS ${PROJECT_NAME} DESTINATION ${LIB_INSTALL_DIR} COMPONENT RuntimeLibraries)

CONFIGURE_FILE(${PROJECT_NAME}.pc.in ${PROJECT_NAME}.pc @ONLY)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.pc DESTINATION ${LIB_INSTALL_DIR}/pkgconfig)

INSTALL(FILES ${HEADERS} DESTINATION include/${PROJECT_NAME})
INSTALL(DIRECTORY ${FEEDBACK_PROFILE_PATH}/data/ DESTINATION share/${PROJECT_NAME})
